fix confetti z-index

--- a/src/components/Confetti/confetti.scss
+++ b/src/components/Confetti/confetti.scss
@@ -6,7 +6,6 @@
     overflow: hidden;
     max-height: 100%;
     width: 100%;
-    z-index: 999
   }
   
   [class|="confetti"] {
